--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@
                gcse.src   = 'https://cse.google.com/cse.js?cx=' + cx;
                var s = document.getElementsByTagName('script')[0];
                s.parentNode.insertBefore(gcse, s);
-            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright">© Rupil 2015</div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://niefba.github.io/publii-rupil/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
+            })();</script><gcse:searchresults-only></gcse:searchresults-only></div></article></main><footer class="footer"><div class="footer__copyright"><strong>© Rupil 2020</strong></div><button class="footer__bttop js-footer__bttop" aria-label="Back to top"><svg><title>Back to top</title><use xlink:href="https://niefba.github.io/publii-rupil/assets/svg/svg-map.svg#toparrow"/></svg></button></footer></div><script>window.publiiThemeMenuConfig = {    
         mobileMenuMode: 'sidebar',
         animationSpeed: 300,
         submenuWidth: 'auto',
